    - Added Harenic Lava, a new fluid required to craft Purified Harene and Haronite Plate
    - Haronite plate is now also a placeable foundation, providing energy to E.A.R.S. cores
    - Haronite plate now has a rocket capacity of 200
    - Added upgrades to Protein shake, Turbofuel and Beta carotene made from purified harene, requiring promethium science to unlock
    - Added recipe to craft warp pylons yourself, requiring haronite plates
    - [TODO] Warp pylons now require a new late-game technology to warp in tiles.
    - [TODO] Warp pylons can now also warp modules into module slots. Also requires the new technology.
    - Total available power on Rabbasca can now be changed via setting
    - Railway expansion is now deprecated and the default for its setting changed. Other mods solve vehicle grids much better. It will be removed in a future update.
    - Reorganized API for other mods to interact with
  Balancing:
    - Reduced default total available power on Rabbasca to 30MW
    - E.A.R.S. core technology 1 cost increased to 500. to compensate, Assembling machines with E.A.R.S. are available earlier
    - Quality modules can now be used in vaults
    - Increased vault access console resistances
    - Increased protection pylon max health. It will now stay around a bit longer
---------------------------------------------------------------------------------------------------
Version: 0.7.3
Date: 2025-11-24
  Bugfixes:
    - Fixed crash when using bunnyhop engine
---------------------------------------------------------------------------------------------------
Version: 0.7.2
Date: 2025-11-23
  Changes:
    - [with Crushing Industry] Added energetic concrete mix required by energetic concrete instead of concrete and energetic residue
  Balancing:
    - Reduced fuel value of energetic residue
---------------------------------------------------------------------------------------------------
Version: 0.7.1
Date: 2025-11-22
  Bugfixes: