@@ -123,6 +123,9 @@ rabbasca-extend-hack=Extend hack duration
 rabbasca-remote-warmup=Warm-up sequence
 haronite-decomposition=Haronite decomposition
 rabbasca-residue-skimming=Skim __FLUID__energetic-residue__
+rabbasca-warp-sequence-building=Warp sequence: Buildings
+rabbasca-warp-sequence-tile=Warp sequence: Tiles
+rabbasca-warp-sequence-module=Warp sequence: Modules
 
 [recipe-description]
 rabbasca-extend-hack=Insert more things into [entity=rabbasca-vault-console] to extend the duration of the hack.\nNote that all items in [entity=rabbasca-vault-console] will be lost once the hack ends, potentially wasting resources.
@@ -239,9 +242,11 @@ bunnyhop-engine-weight=Increases the maximum weight you can carry during a [item
 
 [tooltip]
 bunnyhop-engine-weight-multiplier=Maximum weight multiplier
+rabbasca-warp-pylon-radius=Construction radius
 
 [tooltip-value]
 bunnyhop-engine-weight-multiplier=__1__%
+rabbasca-warp-pylon-radius=__1__x__1__
 
 [rabbasca-extra]
 with-ears= [with E.A.R.S.]
