@@ -1,5 +1,9 @@
 local RECEIVER_RADIUS = 21
 
+local function get_radius(quality_level)
+    return RECEIVER_RADIUS * (1 + (quality_level - 1) * 0.6)
+end
+
 local function awake(receiver)
     if receiver.valid and receiver.get_recipe() == nil and receiver.surface.planet then
         receiver.set_recipe("rabbasca-remote-warmup")
@@ -11,7 +15,7 @@ local function awake_receivers(entity)
     if not entity.valid then return end
     local proto = entity.ghost_prototype
     if not proto then return end
-    local radius = RECEIVER_RADIUS
+    local radius = get_radius(5) -- TODO: Does not account for custom qualities
     local receivers = entity.surface.find_entities_filtered{
         area = {
             {entity.position.x - radius, entity.position.y - radius},
@@ -50,7 +54,7 @@ local function try_build_ghost(entity)
     local proto = entity.ghost_prototype
     if not (proto.items_to_place_this and #proto.items_to_place_this > 0) then return end
     if not (storage.rabbasca_remote_builder and storage.rabbasca_remote_builder.valid) then
-        local builders = game.surfaces.rabbasca and game.surfaces.rabbasca.find_entities_filtered{name = "rabbasca-warp-cargo-pad"}
+        local builders = (game.surfaces.rabbasca and game.surfaces.rabbasca.find_entities_filtered{name = "rabbasca-warp-cargo-pad"}) or { }
         if #builders > 0 then
             storage.rabbasca_remote_builder = builders[1]
         else
@@ -108,44 +112,111 @@ end
 
 local M = {}
 
-function M.attempt_build_ghost(pylon)
-    local is_calling = pylon.get_recipe() and pylon.get_recipe().name == "rabbasca-warp-sequence"
+function M.get_warpable_types()
+    return { "entity-ghost", "tile-ghost" }
+end
+
+function M.attempt_warmup(pylon, radius)
     local position = pylon.position
-    local radius = RECEIVER_RADIUS
+    if pylon.force.recipes["rabbasca-warp-sequence-tile"].enabled then
+        local ghosts = pylon.surface.count_entities_filtered {
+            area = {
+                {position.x - radius, position.y - radius},
+                {position.x + radius, position.y + radius}
+            },
+            name = { "tile-ghost" }
+        }
+        if #ghosts > 0 then
+            pylon.set_recipe("rabbasca-warp-sequence-tile")
+            pylon.recipe_locked = true
+            return true
+        end
+    end
+    if pylon.force.recipes["rabbasca-warp-sequence-building"].enabled then
+        local ghosts = pylon.surface.count_entities_filtered {
+            area = {
+                {position.x - radius, position.y - radius},
+                {position.x + radius, position.y + radius}
+            },
+            name = { "entity-ghost" }
+        }
+        if #ghosts > 0 then
+            pylon.set_recipe("rabbasca-warp-sequence-building")
+            pylon.recipe_locked = true
+            return true
+        end
+    end
+    -- if pylon.force.recipe["rabbasca-warp-sequence-module"].enabled then
+    --     local ghosts = pylon.surface.count_entities_filtered {
+    --         area = {
+    --             {position.x - radius, position.y - radius},
+    --             {position.x + radius, position.y + radius}
+    --         },
+    --         name = { }
+    --     }
+    --     if #ghosts > 0 then
+    --         pylon.set_recipe("rabbasca-warp-sequence-module")
+    --         pylon.recipe_locked = true
+    --         return true
+    --     end
+    -- end
+    return false
+end
+
+function M.attempt_module(pylon, radius)
+    local position = pylon.position
+    -- TODO: Not yet implemented
+    pylon.set_recipe("rabbasca-remote-warmup")
+    pylon.recipe_locked = true
+end
+
+function M.attempt_building(pylon, radius)
+    local position = pylon.position
     local ghosts = pylon.surface.find_entities_filtered{
         area = {
             {position.x - radius, position.y - radius},
             {position.x + radius, position.y + radius}
         },
-        -- TODO: Support "item-request-proxy" for module slots?
-        name = { "entity-ghost", "tile-ghost" }
+        name = { "entity-ghost" }
     }
-    -- on successful build, next attempt is faster
-    -- when no ghosts left, go to sleep
-    if is_calling then
-        for _, ghost in pairs(ghosts) do
-            local result, status = try_build_ghost(ghost)
-            pylon.custom_status = status
-            if result then return end
-        end
-        pylon.set_recipe("rabbasca-remote-warmup")
+    for _, ghost in pairs(ghosts) do
+        local result, status = try_build_ghost(ghost)
+        pylon.custom_status = status
+        if result then return end
+    end
+    M.attempt_module(pylon, radius)
+end
+
+function M.attempt_tile(pylon, radius)
+    local position = pylon.position
+    local ghosts = pylon.surface.find_entities_filtered{
+        area = {
+            {position.x - radius, position.y - radius},
+            {position.x + radius, position.y + radius}
+        },
+        name = { "tile-ghost" }
+    }
+    for _, ghost in pairs(ghosts) do
+        local result, status = try_build_ghost(ghost)
+        pylon.custom_status = status
+        if result then return end
+    end
+    M.attempt_building(pylon, radius)
+end
+
+function M.attempt_build_ghost(pylon)
+    local recipe = pylon.get_recipe() and pylon.get_recipe().name
+    local radius = get_radius(pylon.quality.level)
+    if not recipe or (recipe and not M.attempt_warmup(pylon, radius)) then 
+        pylon.set_recipe(nil) 
         pylon.recipe_locked = true
-    else
-        if #ghosts == 0 or not storage.rabbasca_remote_builder or not pylon.surface.planet then 
-            pylon.set_recipe(nil) 
-            pylon.recipe_locked = true
-            pylon.custom_status = status_invalid_target
-            return 
-        end
-        for _, ghost in pairs(ghosts) do
-            local result, status = try_build_ghost(ghost)
-            pylon.custom_status = status
-            if result then
-                pylon.set_recipe("rabbasca-warp-sequence")
-                pylon.recipe_locked = true
-                return 
-            end
-        end
+        pylon.custom_status = status_invalid_target
+    elseif recipe == "rabbasca-warp-sequence-building" then
+        M.attempt_building(pylon, radius)
+    elseif recipe == "rabbasca-warp-sequence-tile" then
+        M.attempt_tile(pylon, radius)
+    elseif recipe == "rabbasca-warp-sequence-module" then
+        M.attempt_module(pylon, radius)
     end
 end
 
